[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main/Game/Stove.gd" type="Script" id=1]
[ext_resource path="res://KiwiSoda.ttf" type="DynamicFontData" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="Stove" type="Node2D"]
script = ExtResource( 1 )

[node name="Inventory" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -24.0
margin_top = 24.0
margin_right = 24.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Stove"
align = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
